# TaskSysten

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  conanfile.py  vcpkg-ci.yml  vcpkg.json
.github/workflows/: conan-publish.yml  prepare-release.yml
benchmarks/: benchmark_main.cpp
cmake/: GenerateVersion.cmake  TaskEngineConfig.cmake.in
doc/: DEVELOPMENT_GUIDE.md  GitHubActionsGuide.md  IntegrationGuide.md  OPTIMIZATION_BACKLOG.md  SYSTEM_CONTEXT.md
examples/: main.cpp
include/TaskEngine/: Logger.h  TaskExecutor.h  ThreadPool.h  TimerManager.h  version.h.in
src/: Logger.cpp  Logger.h  TaskExecutor.cpp  TaskExecutor.h  ThreadPool.cpp  ThreadPool.h  TimerManager.cpp  TimerManager.h
tests/: test_task_executor.cpp  test_thread_pool.cpp  test_timer_manager.cpp
